changed link from quiz to results

--- a/views/quiz.erb
+++ b/views/quiz.erb
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 
   <body>
-<form method="POST" action="/quiz">
+<form method="POST" action="/results">
   <!--Enter Age <input type= "text" name= "ageofuser" placeholder="Your Age"><br>-->
   <!--What type of work experience are you looking for? <br>-->
   <!--<input type="radio" name="type_of_job" value="Job">Jobs<br>-->
