--- a/views/index.erb
+++ b/views/index.erb
@@ -87,7 +87,7 @@
                     <h2 class="section-heading">Helping you discover your dream job</h2>
                     <hr class="light">
                     <p class="text-faded">In today's world, there are so many different career possiblities. There's a job for everything and anything.Take our quiz to find out what the perfect job is for you. </p>
-                    <a href="quiz" class="page-scroll btn btn-default btn-xl sr-button">Take Our Quiz</a>
+                    <a href="/quiz" class="page-scroll btn btn-default btn-xl sr-button">Take Our Quiz</a>
                 </div>
             </div>
         </div>
